codama-macros/tests/codama_attribute/type_nodes/fixed_size_type_node/type_already_set.fail.stderr
error: type is already set
 --> tests/codama_attribute/type_nodes/fixed_size_type_node/type_already_set.fail.rs:3:41
  |
3 | #[codama(type = fixed_size(boolean, 42, number(u32)))]
  |                                         ^^^^^^^^^^^

error: type is already set
 --> tests/codama_attribute/type_nodes/fixed_size_type_node/type_already_set.fail.rs:6:55
  |
6 | #[codama(type = fixed_size(type = boolean, size = 42, type = number(u32)))]
  |                                                       ^^^^^^^^^^^^^^^^^^
