codama-macros/tests/codama_attribute/type_nodes/fixed_size_type_node/type_already_set.fail.rs
use codama::codama;

#[codama(type = fixed_size(boolean, 42, number(u32)))]
pub struct Test;

#[codama(type = fixed_size(type = boolean, size = 42, type = number(u32)))]
pub struct TestExplicit;

fn main() {}
